--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -179,12 +179,13 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
    constexpr auto indexBoundsOut = VertexFibarFSbar::index_bounds;
    constexpr auto indexBoundsIn = VertexFbarFjS::index_bounds;
 
-   std::valarray<std::complex<double>> res {0.0, 0.0};
-
    // masses of external fermions
    const auto mj = context.mass<Fj>(indices_in);
-   const auto mi = context.mass<Fi>(indices_out);
+   const auto mj2 = mj*mj;
+   const auto mi = context.mass<Fi>(indices_out)*0.;
+   const auto mi2 = mi*mi;
 
+   std::valarray<std::complex<double>> res {0.0, 0.0};
    // loop over all possible particle "generations" attached to both vertices
    for (const auto& indexIn: indexBoundsIn) {
       for (const auto& indexOut: indexBoundsOut) {
@@ -209,13 +210,18 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
 
          // get me the FjbarFjV vertex   
          auto spectator_indices = default_indices_for_spectator<V>();
-         const auto indexFjbarFjVbar = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate(  jFieldIndices, jFieldIndices), spectator_indices);
+         const auto indexFjbarFjVbar = flexiblesusy::cxx_diagrams::impl::concatenate( 
+            flexiblesusy::cxx_diagrams::impl::concatenate(jFieldIndices, jFieldIndices), 
+            spectator_indices
+         );
          const auto FjBarFjVBar = VertexFjBarFjVBar::evaluate(indexFjbarFjVbar, context);
          const auto FjBarFjVBarL = FjBarFjVBar.left();
          const auto FjBarFjVBarR = FjBarFjVBar.right();
 
          const auto mF = context.mass<F>(fermionFieldIndicesIn);
+         const auto mF2 = mF * mF;
          const auto mS = context.mass<S>(scalarFieldIndicesIn);
+         const auto mS2 = mS*mS;
 
          const auto FBarFjSBar = VertexFbarFjS::evaluate(indexIn, context);
          const auto FBarFjSBarL = FBarFjSBar.left();
@@ -226,39 +232,14 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
          const auto FiBarFSR = FiBarFSBar.right();
          
          const std::complex<double> A1L = 
-         (-((FBarFjSBarL*FiBarFSR*FjBarFjVBarL*A0i(aa0,Power(mF,2)))/(Power(mi,2) - Power(mj,2))) + 
-     (FBarFjSBarL*FiBarFSR*FjBarFjVBarL*A0i(aa0,Power(mS,2)))/(Power(mi,2) - Power(mj,2)) + 
-     (FBarFjSBarL*FiBarFSR*FjBarFjVBarL*Power(mF,2)*B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/
-      (Power(mi,2) - Power(mj,2)) + (FBarFjSBarL*FiBarFSL*FjBarFjVBarL*mF*mi*B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/
-      (Power(mi,2) - Power(mj,2)) + (FBarFjSBarR*FiBarFSR*FjBarFjVBarL*mF*mj*B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/
-      (Power(mi,2) - Power(mj,2)) + (FBarFjSBarR*FiBarFSL*FjBarFjVBarL*mi*mj*B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/
-      (Power(mi,2) - Power(mj,2)) - (FBarFjSBarL*FiBarFSR*FjBarFjVBarL*Power(mS,2)*
-        B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2)) + 
-     (mi*((-2*FBarFjSBarL*FiBarFSR*FjBarFjVBarL*mi*B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/
-           (Power(mi,2) - Power(mj,2)) + (2*FBarFjSBarR*FiBarFSL*FjBarFjVBarL*mj*
-             B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2))))/2. + 
-     mj*((FBarFjSBarR*FiBarFSL*FjBarFjVBarR*mi*B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2)) - 
-        (FBarFjSBarL*FiBarFSR*FjBarFjVBarR*mj*B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2))) + 
-     (mj*((-2*FBarFjSBarR*FiBarFSL*FjBarFjVBarR*mi*B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/
-           (Power(mi,2) - Power(mj,2)) + (2*FBarFjSBarL*FiBarFSR*FjBarFjVBarR*mj*
-             B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2))))/2.)/(16.*Power(Pi,2));
+         (FjBarFjVBarL*(-(FBarFjSBarL*FiBarFSR*A0i(aa0,mF2)) + FBarFjSBarL*FiBarFSR*A0i(aa0,mS2) + 
+       ((FiBarFSR*mF + FiBarFSL*mi)*(FBarFjSBarL*mF + FBarFjSBarR*mj) - FBarFjSBarL*FiBarFSR*mS2)*B0i(bb0,mi2,mS2,mF2) + 
+       mi*(-(FBarFjSBarL*FiBarFSR*mi) + FBarFjSBarR*FiBarFSL*mj)*B0i(bb1,mi2,mS2,mF2)))/(16.*(mi - mj)*(mi + mj)*Power(Pi,2));
+
          const std::complex<double> A1R = 
-(-((FBarFjSBarR*FiBarFSL*FjBarFjVBarR*A0i(aa0,Power(mF,2)))/(Power(mi,2) - Power(mj,2))) + 
-     (FBarFjSBarR*FiBarFSL*FjBarFjVBarR*A0i(aa0,Power(mS,2)))/(Power(mi,2) - Power(mj,2)) + 
-     (FBarFjSBarR*FiBarFSL*FjBarFjVBarR*Power(mF,2)*B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/
-      (Power(mi,2) - Power(mj,2)) + (FBarFjSBarR*FiBarFSR*FjBarFjVBarR*mF*mi*B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/
-      (Power(mi,2) - Power(mj,2)) + (FBarFjSBarL*FiBarFSL*FjBarFjVBarR*mF*mj*B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/
-      (Power(mi,2) - Power(mj,2)) + (FBarFjSBarL*FiBarFSR*FjBarFjVBarR*mi*mj*B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/
-      (Power(mi,2) - Power(mj,2)) - (FBarFjSBarR*FiBarFSL*FjBarFjVBarR*Power(mS,2)*
-        B0i(bb0,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2)) + 
-     mj*((FBarFjSBarL*FiBarFSR*FjBarFjVBarL*mi*B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2)) - 
-        (FBarFjSBarR*FiBarFSL*FjBarFjVBarL*mj*B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2))) + 
-     (mj*((-2*FBarFjSBarL*FiBarFSR*FjBarFjVBarL*mi*B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/
-           (Power(mi,2) - Power(mj,2)) + (2*FBarFjSBarR*FiBarFSL*FjBarFjVBarL*mj*
-             B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2))))/2. + 
-     (mi*((-2*FBarFjSBarR*FiBarFSL*FjBarFjVBarR*mi*B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/
-           (Power(mi,2) - Power(mj,2)) + (2*FBarFjSBarL*FiBarFSR*FjBarFjVBarR*mj*
-             B0i(bb1,Power(mi,2),Power(mS,2),Power(mF,2)))/(Power(mi,2) - Power(mj,2))))/2.)/(16.*Power(Pi,2));
+         (FjBarFjVBarR*(-(FBarFjSBarR*FiBarFSL*A0i(aa0,mF2)) + FBarFjSBarR*FiBarFSL*A0i(aa0,mS2) + 
+       ((FiBarFSL*mF + FiBarFSR*mi)*(FBarFjSBarR*mF + FBarFjSBarL*mj) - FBarFjSBarR*FiBarFSL*mS2)*B0i(bb0,mi2,mS2,mF2) + 
+       mi*(-(FBarFjSBarR*FiBarFSL*mi) + FBarFjSBarL*FiBarFSR*mj)*B0i(bb1,mi2,mS2,mF2)))/(16.*(mi - mj)*(mi + mj)*Power(Pi,2));
          
          res -= std::valarray<std::complex<double>> {A1L, A1R};
       }
@@ -281,12 +262,13 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
    constexpr auto indexBoundsOut = VertexFiBarFSBar::index_bounds;
    constexpr auto indexBoundsIn = VertexFBarFjS::index_bounds;
 
-   std::valarray<std::complex<double>> res {0.0, 0.0};
-
    // masses of external fermions
    const auto mj = context.mass<Fj>(indices_in);
-   const auto mi = context.mass<Fi>(indices_out);
+   const auto mj2 = mj*mj;
+   const auto mi = context.mass<Fi>(indices_out) *0.;
+   const auto mi2 = mi*mi;
 
+   std::valarray<std::complex<double>> res {0.0, 0.0};
    // loop over all possible particle "generations" attached to both vertices
    for (const auto& indexIn: indexBoundsIn) {
       for (const auto& indexOut: indexBoundsOut) {
@@ -318,7 +300,9 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
          const auto FiBarFiVBarR = FiBarFiVBar.right();
 
          const auto mF = context.mass<F>(fermionFieldIndicesIn);
+         const auto mF2 = mF * mF;
          const auto mS = context.mass<S>(scalarFieldIndicesIn);
+         const auto mS2 = mS*mS;
 
          const auto FBarFjSBar = VertexFBarFjS::evaluate(indexIn, context);
          const auto FBarFjSBarL = FBarFjSBar.left();
@@ -329,29 +313,15 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
          const auto FiBarFSR = FiBarFSBar.right();
          
          const std::complex<double> A1L = 
-         (-((FBarFjSBarL*FiBarFiVBarL*FiBarFSR*A0i(aa0,Power(mF,2)))/(-Power(mi,2) + Power(mj,2))) + 
-     (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*A0i(aa0,Power(mS,2)))/(-Power(mi,2) + Power(mj,2)) + 
-     (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*Power(mF,2)*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarL*FiBarFiVBarL*FiBarFSL*mF*mi*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarR*FiBarFiVBarL*FiBarFSR*mF*mj*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarR*FiBarFiVBarL*FiBarFSL*mi*mj*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) - (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*Power(mS,2)*
-        B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2)) + 
-     mj*((FBarFjSBarR*FiBarFiVBarL*FiBarFSL*mi*B0i(bb1,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2)) - 
-        (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*mj*B0i(bb1,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2))))/
-   (16.*Power(Pi,2));
+         (FiBarFiVBarL*(FBarFjSBarL*FiBarFSR*A0i(aa0,mF2) - FBarFjSBarL*FiBarFSR*A0i(aa0,mS2) - 
+       ((FiBarFSR*mF + FiBarFSL*mi)*(FBarFjSBarL*mF + FBarFjSBarR*mj) - FBarFjSBarL*FiBarFSR*mS2)*B0i(bb0,mj2,mS2,mF2) + 
+       mj*(-(FBarFjSBarR*FiBarFSL*mi) + FBarFjSBarL*FiBarFSR*mj)*B0i(bb1,mj2,mS2,mF2)))/(16.*(mi - mj)*(mi + mj)*Power(Pi,2));
+
          const std::complex<double> A1R = 
-(-((FBarFjSBarL*FiBarFiVBarL*FiBarFSR*A0i(aa0,Power(mF,2)))/(-Power(mi,2) + Power(mj,2))) + 
-     (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*A0i(aa0,Power(mS,2)))/(-Power(mi,2) + Power(mj,2)) + 
-     (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*Power(mF,2)*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarL*FiBarFiVBarL*FiBarFSL*mF*mi*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarR*FiBarFiVBarL*FiBarFSR*mF*mj*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) + (FBarFjSBarR*FiBarFiVBarL*FiBarFSL*mi*mj*B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/
-      (-Power(mi,2) + Power(mj,2)) - (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*Power(mS,2)*
-        B0i(bb0,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2)) + 
-     mj*((FBarFjSBarR*FiBarFiVBarL*FiBarFSL*mi*B0i(bb1,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2)) - 
-        (FBarFjSBarL*FiBarFiVBarL*FiBarFSR*mj*B0i(bb1,Power(mj,2),Power(mS,2),Power(mF,2)))/(-Power(mi,2) + Power(mj,2))))/
-   (16.*Power(Pi,2));
+         (FiBarFiVBarR*(FBarFjSBarR*FiBarFSL*A0i(aa0,mF2) - FBarFjSBarR*FiBarFSL*A0i(aa0,mS2) - 
+       ((FiBarFSL*mF + FiBarFSR*mi)*(FBarFjSBarR*mF + FBarFjSBarL*mj) - FBarFjSBarR*FiBarFSL*mS2)*B0i(bb0,mj2,mS2,mF2) + 
+       mj*(-(FBarFjSBarL*FiBarFSR*mi) + FBarFjSBarR*FiBarFSL*mj)*B0i(bb1,mj2,mS2,mF2)))/(16.*(mi - mj)*(mi + mj)*Power(Pi,2));
+
          res -= std::valarray<std::complex<double>> {A1L, A1R};
       }
    }
@@ -365,26 +335,27 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
       const typename field_indices<Fi>::type& indices_out, 
       EvaluationContext& context) {
 
-   using VertexFBarFVBar = Vertex<typename F::lorentz_conjugate, F, typename V::lorentz_conjugate>;
-   using VertexFBarFjS     = Vertex<typename F::lorentz_conjugate, Fj, S>;
-   using VertexFiBarFSBar  = Vertex<typename Fi::lorentz_conjugate, F, typename S::lorentz_conjugate>;
+   using VertexFBarFVBar  = Vertex<typename F::lorentz_conjugate, F, typename V::lorentz_conjugate>;
+   using VertexFBarFjS    = Vertex<typename F::lorentz_conjugate, Fj, S>;
+   using VertexFiBarFSBar = Vertex<typename Fi::lorentz_conjugate, F, typename S::lorentz_conjugate>;
 
    constexpr auto indexBoundsOut = VertexFiBarFSBar::index_bounds;
    constexpr auto indexBoundsIn = VertexFBarFjS::index_bounds;
 
-
    // masses of external fermions
    const auto mj = context.mass<Fj>(indices_in);
    const auto mj2 = mj*mj;
-   const auto mi = context.mass<Fi>(indices_out);
+   const auto mi = context.mass<Fi>(indices_out)*0.;
    const auto mi2 = mi*mi;
 
    auto spectator_indices = default_indices_for_spectator<V>();
 
-   // loop over all possible particle "generations" attached to both vertices
    std::valarray<std::complex<double>> res {0.0, 0.0};
+   // loop over all possible particle "generations" attached to both vertices
+
    for (const auto& indexIn: indexBoundsIn) {
       for (const auto& indexOut: indexBoundsOut) {
+
          // cycle if generations of external fermions  are different then requested   
          const auto jFieldIndices = VertexFBarFjS::template fieldIndices<1>(indexIn);
          const auto iFieldIndices = VertexFiBarFSBar::template fieldIndices<0>(indexOut);
@@ -469,8 +440,9 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
    const auto mi = context.mass<Fi>(indices_out);
    const auto mi2 = mi*mi;
 
-   // loop over all possible particle "generations" attached to both vertices
    std::valarray<std::complex<double>> res {0.0, 0.0};
+   // loop over all possible particle "generations" attached to both vertices
+
    constexpr auto indexBoundsOut = VertexFiBarFSBar::index_bounds;
    constexpr auto indexBoundsIn = VertexFBarFjS::index_bounds;
    for (const auto& indexIn: indexBoundsIn) {
@@ -490,8 +462,10 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
          // get SBarSVBar vertex 
          const auto scalarFieldIndicesIn = VertexFBarFjS::template fieldIndices<2>(indexIn);
          const auto scalarFieldIndicesOut = VertexFiBarFSBar::template fieldIndices<2>(indexOut);
-         const auto indexSBarSVBar = flexiblesusy::cxx_diagrams::impl::concatenate(scalarFieldIndicesOut, 
-            flexiblesusy::cxx_diagrams::impl::concatenate( scalarFieldIndicesIn, spectator_indices));
+         const auto indexSBarSVBar = flexiblesusy::cxx_diagrams::impl::concatenate(
+            scalarFieldIndicesOut, 
+            flexiblesusy::cxx_diagrams::impl::concatenate(scalarFieldIndicesIn, spectator_indices)
+         );
          const auto SBarSVBar = VertexSBarSVBar::evaluate(indexSBarSVBar, context).value();
 
          const auto mF = context.mass<F>(fermionFieldIndicesIn);
@@ -510,14 +484,14 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
          const auto FiBarFSR = FiBarFSBar.right();
 
          const std::complex<double> A1L = 
-         (SBarSVBar*(-2*FBarFjSBarL*FiBarFSR*C0i(cc00,0,mi2,mj2,mSB2,mSA2,mF2) + FBarFjSBarL*FiBarFSR*(mi - mj)*(mi + mj)*C0i(cc12,0,mi2,mj2,mSB2,mSA2,mF2) - 
+         (SBarSVBar*(-2*FBarFjSBarL*FiBarFSR*C0i(cc00,0,mi2,mj2,mSB2,mSA2,mF2) /*+ FBarFjSBarL*FiBarFSR*(mi - mj)*(mi + mj)*C0i(cc12,0,mi2,mj2,mSB2,mSA2,mF2) - 
        (FBarFjSBarL*FiBarFSL*mF*mi + FBarFjSBarR*FiBarFSR*mF*mj + FBarFjSBarR*FiBarFSL*mi*mj + FBarFjSBarL*FiBarFSR*mj2)*C0i(cc2,0,mi2,mj2,mSB2,mSA2,mF2) - 
-       mj*(FBarFjSBarR*FiBarFSL*mi + FBarFjSBarL*FiBarFSR*mj)*C0i(cc22,0,mi2,mj2,mSB2,mSA2,mF2)))/(16.*Power(Pi,2));
+       mj*(FBarFjSBarR*FiBarFSL*mi + FBarFjSBarL*FiBarFSR*mj)*C0i(cc22,0,mi2,mj2,mSB2,mSA2,mF2)*/))/(16.*Power(Pi,2));
 
          const std::complex<double> A1R = 
-         (SBarSVBar*(-2*FBarFjSBarR*FiBarFSL*C0i(cc00,0,mi2,mj2,mSB2,mSA2,mF2) + FBarFjSBarR*FiBarFSL*(mi2 - mj2)*C0i(cc12,0,mi2,mj2,mSB2,mSA2,mF2) - 
+         (SBarSVBar*(-2*FBarFjSBarR*FiBarFSL*C0i(cc00,0,mi2,mj2,mSB2,mSA2,mF2) /*+ FBarFjSBarR*FiBarFSL*(mi2 - mj2)*C0i(cc12,0,mi2,mj2,mSB2,mSA2,mF2) - 
        (FBarFjSBarR*FiBarFSR*mF*mi + FBarFjSBarL*FiBarFSL*mF*mj + FBarFjSBarL*FiBarFSR*mi*mj + FBarFjSBarR*FiBarFSL*Power(mj,2))*
-        C0i(cc2,0,mi2,mj2,mSB2,mSA2,mF2) - (FBarFjSBarL*FiBarFSR*mi*mj + FBarFjSBarR*FiBarFSL*mj2)*C0i(cc22,0,mi2,mj2,mSB2,mSA2,mF2)))/(16.*Power(Pi,2));
+        C0i(cc2,0,mi2,mj2,mSB2,mSA2,mF2) - (FBarFjSBarL*FiBarFSR*mi*mj + FBarFjSBarR*FiBarFSL*mj2)*C0i(cc22,0,mi2,mj2,mSB2,mSA2,mF2)*/))/(16.*Power(Pi,2));
          
          res -= std::valarray<std::complex<double>> {A1L, A1R};
       }
