--- a/templates/cxx_qft/context_base.hpp.in
+++ b/templates/cxx_qft/context_base.hpp.in
@@ -30,37 +30,39 @@
 
 #include "@ModelName@_fields.hpp"
 
-namespace flexiblesusy {
-namespace @ModelName@_cxx_diagrams {
-struct context_base
+namespace flexiblesusy
 {
-  @ModelName@_mass_eigenstates& model; ///< The model object.
- 
-  template<class Field>
-  double mass(const typename field_indices<Field>::type& indices) const
-  {
-    using CleanField = typename fields::remove_lorentz_conjugation<
-      Field
-    >::type;
-    return mass_impl<CleanField>(indices);
-  }
+namespace @ModelName@_cxx_diagrams
+{
+   struct context_base {
+      @ModelName@_mass_eigenstates& model; ///< The model object.
 
-  context_base( @ModelName@_mass_eigenstates &m ) : model( m ) {}
-  context_base( const context_base & ) = default;
-  context_base( context_base && ) = default;
-  
-  context_base &operator=( const context_base & ) = default;
-  context_base &operator=( context_base && ) = default;
-  
-  virtual ~context_base( void ) = default;
-private:
-  template<class Field>
-  double mass_impl(const typename field_indices<Field>::type& indices) const;
-};
+      template <class Field>
+      double mass(const typename field_indices<Field>::type& indices) const
+      {
+         using CleanField =
+            typename fields::remove_lorentz_conjugation<Field>::type;
+         return mass_impl<CleanField>(indices);
+      }
 
-@CXXDiagrams_MassFunctions@
+      context_base(@ModelName@_mass_eigenstates& m) : model(m) {}
+      context_base(const context_base&) = default;
+      context_base(context_base&&) = default;
 
-} // namespace cxx_diagrams
+      context_base& operator=(const context_base&) = default;
+      context_base& operator=(context_base&&) = default;
+
+      virtual ~context_base(void) = default;
+
+   private:
+      template <class Field>
+      double
+      mass_impl(const typename field_indices<Field>::type& indices) const;
+   };
+
+   @CXXDiagrams_MassFunctions@
+
+} // namespace @ModelName@_cxx_diagrams
 } // namespace flexiblesusy
 
 #include "@ModelName@_vertices.hpp"
