--- a/templates/cxx_qft/fields.hpp.in
+++ b/templates/cxx_qft/fields.hpp.in
@@ -33,14 +33,14 @@
 #include <boost/array.hpp>
 #include <boost/version.hpp>
 
-#include <boost/mpl/pair.hpp>
 #include <boost/mpl/erase.hpp>
+#include <boost/mpl/joint_view.hpp>
+#include <boost/mpl/pair.hpp>
 #include <boost/mpl/vector.hpp>
 #include <boost/mpl/vector_c.hpp>
-#include <boost/mpl/joint_view.hpp>
 
-#include <boost/fusion/adapted/mpl.hpp>
 #include <boost/fusion/adapted/boost_array.hpp>
+#include <boost/fusion/adapted/mpl.hpp>
 
 #if BOOST_VERSION >= 105800
 #include <boost/fusion/include/move.hpp>
@@ -48,125 +48,116 @@
 #include <boost/fusion/include/copy.hpp>
 #endif
 
-namespace flexiblesusy {
-namespace @ModelName@_cxx_diagrams {
-// Declare a type that can hold the field indices for any given field
-template<class Field> struct field_indices {
-   using type = std::array<int, Field::numberOfFieldIndices>;
-};
+namespace flexiblesusy
+{
+namespace @ModelName@_cxx_diagrams
+{
+   // Declare a type that can hold the field indices for any given field
+   template <class Field>
+   struct field_indices {
+      using type = std::array<int, Field::numberOfFieldIndices>;
+   };
 
-namespace detail
-{
-template<class Field>
-struct number_of_field_indices
-{
-  static constexpr int value =
-    std::tuple_size<typename field_indices<Field>::type>::value;
-  using type = boost::mpl::int_<value>;
-};
+   namespace detail
+   {
+   template <class Field>
+   struct number_of_field_indices {
+      static constexpr int value =
+         std::tuple_size<typename field_indices<Field>::type>::value;
+      using type = boost::mpl::int_<value>;
+   };
 
-template<class FieldSequence>
-struct total_number_of_field_indices
-{
-  using type = typename boost::mpl::fold<
-    FieldSequence,
-    boost::mpl::int_<0>,
-    boost::mpl::plus<
-      boost::mpl::_1,
-      number_of_field_indices<
-        boost::mpl::_2
-      >
-    >
-  >::type;
-  static constexpr int value = type::value;
-};
-}
+   template <class FieldSequence>
+   struct total_number_of_field_indices {
+      using type = typename boost::mpl::fold<
+         FieldSequence, boost::mpl::int_<0>,
+         boost::mpl::plus<boost::mpl::_1,
+                          number_of_field_indices<boost::mpl::_2>>>::type;
+      static constexpr int value = type::value;
+   };
+   } // namespace detail
 
-template<class Field>
-typename std::enable_if<
-  Field::numberOfGenerations != 1,
-  bool
->::type
-isSMField(const typename field_indices<Field>::type& indices)
-{
-  boost::array<bool, Field::numberOfGenerations> sm_flags;
+   template <class Field>
+   typename std::enable_if<Field::numberOfGenerations != 1, bool>::type
+   isSMField(const typename field_indices<Field>::type& indices)
+   {
+      boost::array<bool, Field::numberOfGenerations> sm_flags;
 
 #if BOOST_VERSION >= 105800
-  boost::fusion::move(typename Field::sm_flags(), sm_flags);
+      boost::fusion::move(typename Field::sm_flags(), sm_flags);
 #else
-  boost::fusion::copy(typename Field::sm_flags(), sm_flags);
+      boost::fusion::copy(typename Field::sm_flags(), sm_flags);
 #endif
 
-  return sm_flags[indices.front()];
-}
+      return sm_flags[indices.front()];
+   }
 
-template<class Field>
-typename std::enable_if<
-  Field::numberOfGenerations == 1,
-  bool
->::type
-isSMField(const typename field_indices<Field>::type &)
-{
-  return boost::mpl::at_c<
-    typename Field::sm_flags,
-    0
-  >::type::value;
-}
+   template <class Field>
+   typename std::enable_if<Field::numberOfGenerations == 1, bool>::type
+   isSMField(const typename field_indices<Field>::type&)
+   {
+      return boost::mpl::at_c<typename Field::sm_flags, 0>::type::value;
+   }
 
-namespace fields
-{
-template<class Field> struct bar
-{
-  using index_bounds = typename Field::index_bounds;
-  static constexpr int numberOfGenerations = Field::numberOfGenerations;
-  using sm_flags = typename Field::sm_flags;
-  static constexpr int numberOfFieldIndices = Field::numberOfFieldIndices;
-  static constexpr double electric_charge = - Field::electric_charge;
-  using lorentz_conjugate = Field;
+   namespace fields
+   {
+   template <class Field>
+   struct bar {
+      using index_bounds = typename Field::index_bounds;
+      static constexpr int numberOfGenerations = Field::numberOfGenerations;
+      using sm_flags = typename Field::sm_flags;
+      static constexpr int numberOfFieldIndices = Field::numberOfFieldIndices;
+      static constexpr double electric_charge = -Field::electric_charge;
+      using lorentz_conjugate = Field;
 
-  using type = bar<Field>;
-};
+      using type = bar<Field>;
+   };
 
-template<class Field> struct conj
-{
-  using index_bounds = typename Field::index_bounds;
-  static constexpr int numberOfGenerations = Field::numberOfGenerations;
-  using sm_flags = typename Field::sm_flags;
-  static constexpr int numberOfFieldIndices = Field::numberOfFieldIndices;
-  static constexpr double electric_charge = - Field::electric_charge;
-  using lorentz_conjugate = Field;
+   template <class Field>
+   struct conj {
+      using index_bounds = typename Field::index_bounds;
+      static constexpr int numberOfGenerations = Field::numberOfGenerations;
+      using sm_flags = typename Field::sm_flags;
+      static constexpr int numberOfFieldIndices = Field::numberOfFieldIndices;
+      static constexpr double electric_charge = -Field::electric_charge;
+      using lorentz_conjugate = Field;
 
-  using type = conj<Field>;
-};
+      using type = conj<Field>;
+   };
 
-// Double Lorentz conjugation
-template<class Field> struct bar<bar<Field>> {
-   using type = Field;
-};
-template<class Field> struct conj<conj<Field>> {
-   using type = Field;
-};
+   // Double Lorentz conjugation
+   template <class Field>
+   struct bar<bar<Field>> {
+      using type = Field;
+   };
+   template <class Field>
+   struct conj<conj<Field>> {
+      using type = Field;
+   };
 
-// Remove Lorentz conjugation
-template<class Field> struct remove_lorentz_conjugation {
-   using type = Field;
-};
+   // Remove Lorentz conjugation
+   template <class Field>
+   struct remove_lorentz_conjugation {
+      using type = Field;
+   };
 
-template<class Field> struct remove_lorentz_conjugation<bar<Field>> {
-   using type = Field;
-};
+   template <class Field>
+   struct remove_lorentz_conjugation<bar<Field>> {
+      using type = Field;
+   };
 
-template<class Field> struct remove_lorentz_conjugation<conj<Field>> {
-   using type = Field;
-};
+   template <class Field>
+   struct remove_lorentz_conjugation<conj<Field>> {
+      using type = Field;
+   };
 
-@CXXDiagrams_Fields@
-}
+   @CXXDiagrams_Fields@
+   } // namespace fields
 
-using fields::bar;
-using fields::conj;
-using fields::remove_lorentz_conjugation;
-}
-}
+   using fields::bar;
+   using fields::conj;
+   using fields::remove_lorentz_conjugation;
+} // namespace @ModelName@_cxx_diagrams
+} // namespace flexiblesusy
 
 #endif
