--- a/templates/cxx_qft/vertices.hpp.in
+++ b/templates/cxx_qft/vertices.hpp.in
@@ -28,24 +28,24 @@
 #ifndef @ModelName@_CXXQFT_VERTICES_H
 #define @ModelName@_CXXQFT_VERTICES_H
 
+#include "concatenate.hpp"
+#include "multiindex.hpp"
 #include "numerics2.hpp"
 #include "wrappers.hpp"
-#include "multiindex.hpp"
-#include "concatenate.hpp"
 
 #include <array>
 
 #include <boost/array.hpp>
-#include <boost/version.hpp>
 #include <boost/range/join.hpp>
+#include <boost/version.hpp>
 
 #include <boost/mpl/erase.hpp>
-#include <boost/mpl/vector_c.hpp>
 #include <boost/mpl/joint_view.hpp>
+#include <boost/mpl/vector_c.hpp>
 
+#include <boost/fusion/adapted/boost_array.hpp>
 #include <boost/fusion/adapted/mpl.hpp>
 #include <boost/fusion/include/vector.hpp>
-#include <boost/fusion/adapted/boost_array.hpp>
 
 #if BOOST_VERSION >= 105800
 #include <boost/fusion/include/move.hpp>
@@ -58,193 +58,173 @@
 #define DERIVEDPARAMETER(p) context.model.p()
 #define PHASE(p) context.model.get_##p()
 
-namespace flexiblesusy {
-namespace @ModelName@_cxx_diagrams {
-class ScalarVertex {
-private:
-  std::complex<double> val;
-public:
-  ScalarVertex(std::complex<double> v)
-  : val(v) {}
-
-  std::complex<double> value() const
-  {
-     return val;
-  }
-
-  bool isZero() const
-  {
-    return (is_zero(val.real()) && is_zero(val.imag()));
-  }
-};
-
-class ChiralVertex {
-private:
-  std::pair<std::complex<double>, std::complex<double>> value;
-public:
-  ChiralVertex(const std::complex<double>& left,
-               const std::complex<double>& right)
-  : value(left, right) {}
-
-  std::complex<double> left() const
-  {
-     return value.first;
-  }
-
-  std::complex<double> right() const
-  {
-     return value.second;
-  }
-
-  bool isZero() const
-  {
-    return (is_zero(value.first.real()) && is_zero(value.first.imag()) &&
-            is_zero(value.second.real()) && is_zero(value.second.imag()));
-  }
-};
-
-class MomentumDifferenceVertex {
-private:
-  std::complex<double> val;
-  int minuendIndex;
-  int subtrahendIndex;
-public:
-  MomentumDifferenceVertex(std::complex<double> v, int mi, int si )
-  : val(v), minuendIndex(mi), subtrahendIndex(si) {}
-
-  std::complex<double> value(int mi, int si) const
-  {
-    if( mi == minuendIndex && si == subtrahendIndex )
-      return val;
-    if( mi == subtrahendIndex && si == minuendIndex )
-      return -val;
-
-    throw std::invalid_argument(
-       "MomentumDifferenceVertex: Wrong index combination" );
-    return 0.0;
-  }
-
-  bool isZero() const
-  {
-    return (is_zero(val.real()) && is_zero(val.imag()));
-  }
-};
-
-class InverseMetricVertex {
-private:
-  std::complex<double> val;
-public:
-  InverseMetricVertex(std::complex<double> v)
-  : val(v) {}
-
-  std::complex<double> value() const
-  {
-    return val;
-  }
-
-  bool isZero() const
-  {
-    return (is_zero(val.real()) && is_zero(val.imag()));
-  }
-};
-
-/**
- * @class VertexData<F...>
- * @brief VertexData data for a vertex with the fields specified by F....
- */
-template<class ...Fields> struct VertexData;
-
-struct context_base;
-
-template<class ...Fields> class Vertex {
-  using Data = VertexData<Fields...>;
-public:
-  using index_bounds = typename boost::mpl::fold<
-    boost::mpl::vector<Fields...>,
-    boost::mpl::pair<
-      boost::mpl::vector<>,
-      boost::mpl::vector<>
-    >,
-    boost::mpl::pair<
-      boost::mpl::joint_view<
-        boost::mpl::first<boost::mpl::_1>,
-        boost::mpl::first<
-          meta::index_bounds<boost::mpl::_2>
-        >
-      >,
-      boost::mpl::joint_view<
-        boost::mpl::second<boost::mpl::_1>,
-        boost::mpl::second<
-          meta::index_bounds<boost::mpl::_2>
-        >
-      >
-    >
-  >::type;
-  using indices_type = std::array<
-    int,
-    detail::total_number_of_field_indices<
-      boost::mpl::vector<Fields...>
-    >::value
-  >;
-  using vertex_type = typename Data::vertex_type;
-
-  template<int FieldIndex>
-  static typename field_indices<
-    typename boost::mpl::at_c<
-      boost::mpl::vector<Fields...>,
-      FieldIndex
-    >::type
-  >::type 
-  field_indices(const indices_type& indices)
-  {
-    using namespace boost::mpl;
-    using fields = vector<Fields...>;
-
-    using result_type = typename field_indices<
-      typename boost::mpl::at_c<fields, FieldIndex>::type
-    >::type;
-
-    using preceeding_fields = typename erase<
-      fields,
-      typename advance<
-        typename begin<fields>::type,
-        int_<FieldIndex>
-      >::type,
-      typename end<fields>::type
-    >::type;
-
-    constexpr int offset = detail::total_number_of_field_indices<
-      preceeding_fields
-    >::value;
-    constexpr int length = std::tuple_size<result_type>::value;
-
-    result_type result_indices;
-    std::copy( indices.begin() + offset,
-               indices.begin() + offset + length,
-               result_indices.begin() );
-    return result_indices;
-  }
-
-  static vertex_type evaluate(const indices_type& indices,
-    const context_base& context);
-};
-
-@CXXDiagrams_VertexData@
-
-
-@CXXDiagrams_Vertices@
-
-namespace detail {
-@CXXDiagrams_UnitCharge@
-}
-
-static double unit_charge(const context_base& context)
+namespace flexiblesusy
 {
-   return - (detail::unit_charge(context).left().real() /
-     fields::Electron::electric_charge);
-}
+namespace @ModelName@_cxx_diagrams
+{
+   class ScalarVertex
+   {
+   private:
+      std::complex<double> val;
 
-} // namespace cxx_diagrams
+   public:
+      ScalarVertex(std::complex<double> v) : val(v) {}
+
+      std::complex<double> value() const { return val; }
+
+      bool isZero() const
+      {
+         return (is_zero(val.real()) && is_zero(val.imag()));
+      }
+   };
+
+   class ChiralVertex
+   {
+   private:
+      std::pair<std::complex<double>, std::complex<double>> value;
+
+   public:
+      ChiralVertex(const std::complex<double>& left,
+                   const std::complex<double>& right)
+         : value(left, right)
+      {
+      }
+
+      std::complex<double> left() const { return value.first; }
+
+      std::complex<double> right() const { return value.second; }
+
+      bool isZero() const
+      {
+         return (is_zero(value.first.real()) && is_zero(value.first.imag()) &&
+                 is_zero(value.second.real()) && is_zero(value.second.imag()));
+      }
+   };
+
+   class MomentumDifferenceVertex
+   {
+   private:
+      std::complex<double> val;
+      int minuendIndex;
+      int subtrahendIndex;
+
+   public:
+      MomentumDifferenceVertex(std::complex<double> v, int mi, int si)
+         : val(v), minuendIndex(mi), subtrahendIndex(si)
+      {
+      }
+
+      std::complex<double> value(int mi, int si) const
+      {
+         if (mi == minuendIndex && si == subtrahendIndex)
+            return val;
+         if (mi == subtrahendIndex && si == minuendIndex)
+            return -val;
+
+         throw std::invalid_argument(
+            "MomentumDifferenceVertex: Wrong index combination");
+         return 0.0;
+      }
+
+      bool isZero() const
+      {
+         return (is_zero(val.real()) && is_zero(val.imag()));
+      }
+   };
+
+   class InverseMetricVertex
+   {
+   private:
+      std::complex<double> val;
+
+   public:
+      InverseMetricVertex(std::complex<double> v) : val(v) {}
+
+      std::complex<double> value() const { return val; }
+
+      bool isZero() const
+      {
+         return (is_zero(val.real()) && is_zero(val.imag()));
+      }
+   };
+
+   /**
+    * @class VertexData<F...>
+    * @brief VertexData data for a vertex with the fields specified by F....
+    */
+   template <class... Fields>
+   struct VertexData;
+
+   struct context_base;
+
+   template <class... Fields>
+   class Vertex
+   {
+      using Data = VertexData<Fields...>;
+
+   public:
+      using index_bounds = typename boost::mpl::fold<
+         boost::mpl::vector<Fields...>,
+         boost::mpl::pair<boost::mpl::vector<>, boost::mpl::vector<>>,
+         boost::mpl::pair<
+            boost::mpl::joint_view<
+               boost::mpl::first<boost::mpl::_1>,
+               boost::mpl::first<meta::index_bounds<boost::mpl::_2>>>,
+            boost::mpl::joint_view<
+               boost::mpl::second<boost::mpl::_1>,
+               boost::mpl::second<meta::index_bounds<boost::mpl::_2>>>>>::type;
+      using indices_type =
+         std::array<int, detail::total_number_of_field_indices<
+                            boost::mpl::vector<Fields...>>::value>;
+      using vertex_type = typename Data::vertex_type;
+
+      template <int FieldIndex>
+      static typename field_indices<typename boost::mpl::at_c<
+         boost::mpl::vector<Fields...>, FieldIndex>::type>::type
+      field_indices(const indices_type& indices)
+      {
+         using namespace boost::mpl;
+         using fields = vector<Fields...>;
+
+         using result_type = typename field_indices<
+            typename boost::mpl::at_c<fields, FieldIndex>::type>::type;
+
+         using preceeding_fields =
+            typename erase<fields,
+                           typename advance<typename begin<fields>::type,
+                                            int_<FieldIndex>>::type,
+                           typename end<fields>::type>::type;
+
+         constexpr int offset =
+            detail::total_number_of_field_indices<preceeding_fields>::value;
+         constexpr int length = std::tuple_size<result_type>::value;
+
+         result_type result_indices;
+         std::copy(indices.begin() + offset, indices.begin() + offset + length,
+                   result_indices.begin());
+         return result_indices;
+      }
+
+      static vertex_type evaluate(const indices_type& indices,
+                                  const context_base& context);
+   };
+
+   @CXXDiagrams_VertexData@
+
+   @CXXDiagrams_Vertices@
+
+   namespace detail
+   {
+      @CXXDiagrams_UnitCharge@
+   }
+
+   static double unit_charge(const context_base& context)
+   {
+      return -(detail::unit_charge(context).left().real() /
+               fields::Electron::electric_charge);
+   }
+
+} // namespace @ModelName@_cxx_diagrams
 } // namespace flexiblesusy
 
 #undef INPUTPARAMETER
